# iwork

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: file-format.md
examples/: diff_iwa_graph.rs  dump_2001.rs  dump_cells.rs  dump_iwa_graph.rs  generate_scaffold.rs  generate_spreadsheet.rs  generate_table_archives.rs  inspect_numbers.rs  iwa_corpus.rs  iwa_refs.rs  list_tables.rs  personal_budget.numbers
examples/keynote/: basic_white.key  blueprint.key  parchment.key  with_content.key
examples/numbers/: attendance.numbers  more_types.numbers  my_stocks.numbers  pivot_table.numbers  table_and_charts.numbers
examples/pages/: eternal_sunshine.pages  modern_novel.pages  term_paper.pages
examples/support/: iwa_graph.rs
src/: encode.rs  error.rs  inspect.rs  iwa.rs  iwa_text.rs  kind.rs  lib.rs  main.rs  package.rs  plist.rs  protobuf.rs  stylesheet.rs  tests.rs
src/keynote/: mod.rs  presentation.rs  semantic.rs  write.rs
src/numbers/: drawable.rs  formula.rs  header_storage.rs  mod.rs  sheet.rs  spreadsheet.rs  styles.rs  table.rs  table_model.rs  types.rs  write.rs
src/pages/: body.rs  document_model.rs  mod.rs  semantic.rs  write.rs
tests/: harness.rs
workbench/: Cargo.toml
workbench/src/support/: iwa_graph.rs
