[package]
name = "iwork"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Rust tooling for reading and writing Apple Numbers files"

[workspace]
members = ["."]
resolver = "3"

[dependencies]

[dev-dependencies]
protorev = { git = "https://github.com/patrickomatic/protorev.git" }

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_errors_doc = "allow"
must_use_candidate = "allow"
