[package]
name = "iwork-workbench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iwork = { path = ".." }
protorev = { git = "https://github.com/patrickomatic/protorev.git" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
